Spring Boot 3 and Keycloak 25