@@ -1,21 +1,23 @@
 package it.maconsulting.kcautoconf;
 
+import it.maconsulting.kcautoconf.model.EnforcementMode;
+import it.maconsulting.kcautoconf.model.MethodConfiguration;
+import it.maconsulting.kcautoconf.model.PathConfiguration;
 import it.maconsulting.kcautoconf.pojo.AuthorizationSettingsDTO;
 import it.maconsulting.kcautoconf.pojo.AuthorizedResourceDTO;
+import it.maconsulting.kcautoconf.services.AutoconfigurationService;
 import it.maconsulting.kcautoconf.services.JsonKeycloakConfigurationGenerator;
 import org.junit.jupiter.api.Assertions;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.keycloak.adapters.springboot.KeycloakSpringBootProperties;
-import org.keycloak.representations.adapters.config.PolicyEnforcerConfig;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+
+import static org.mockito.Mockito.when;
 
 /**
  * @author Michele Arciprete
@@ -23,54 +25,46 @@ import java.util.List;
  */
 @ExtendWith(MockitoExtension.class)
 class JsonKeycloakConfigurationGeneratorTest {
-    private JsonKeycloakConfigurationGenerator sut;
 
     @Mock
-    private KeycloakSpringBootProperties keycloakSpringBootProperties;
+    private AutoconfigurationService autoconfigurationService;
 
-    @BeforeEach
-    public void setup() {
-//        KeycloakSpringBootProperties keycloakSpringBootProperties = new KeycloakSpringBootProperties();
-//        PolicyEnforcerConfig policyEnforcerConfig = new PolicyEnforcerConfig();
-//        keycloakSpringBootProperties.setPolicyEnforcerConfig(policyEnforcerConfig);
-        sut = new JsonKeycloakConfigurationGenerator(keycloakSpringBootProperties);
-    }
+    @InjectMocks
+    private JsonKeycloakConfigurationGenerator sut;
+
 
     @Test
     void givenExistingPath_isNotAdded() {
-        PolicyEnforcerConfig policyEnforcerConfig = new PolicyEnforcerConfig();
-        List<PolicyEnforcerConfig.PathConfig> pathConfigurations = new ArrayList<>();
-        PolicyEnforcerConfig.PathConfig existingPath = new PolicyEnforcerConfig.PathConfig();
+        List<PathConfiguration> pathConfigurations = new ArrayList<>();
+        PathConfiguration existingPath = new PathConfiguration();
         existingPath.setPath("/my/path");
         existingPath.setId("123456");
         pathConfigurations.add(existingPath);
-        policyEnforcerConfig.setPaths(pathConfigurations);
 
-        Mockito.when(keycloakSpringBootProperties.getPolicyEnforcerConfig()).thenReturn(policyEnforcerConfig);
+        when(autoconfigurationService.getPathConfigurationsDom()).thenReturn(pathConfigurations);
 
         AuthorizationSettingsDTO settings = sut.generateConfigurationAsJson();
         Assertions.assertTrue(settings.getResources().isEmpty());
-
     }
 
     @Test
     void givenProperties_exportObjectIsCreated() {
-        PolicyEnforcerConfig policyEnforcerConfig = new PolicyEnforcerConfig();
-        List<PolicyEnforcerConfig.PathConfig> pathConfigurations = new ArrayList<>();
-        PolicyEnforcerConfig.PathConfig existingPath = new PolicyEnforcerConfig.PathConfig();
+        List<PathConfiguration> pathConfigurations = new ArrayList<>();
+        PathConfiguration existingPath = new PathConfiguration();
         existingPath.setPath("/my/path");
         existingPath.setName("Add User");
-        existingPath.setEnforcementMode(PolicyEnforcerConfig.EnforcementMode.ENFORCING);
-        PolicyEnforcerConfig.MethodConfig myMethod = new PolicyEnforcerConfig.MethodConfig();
+        existingPath.setDisplayName("Add User Details");
+        existingPath.setEnforcementMode(EnforcementMode.ENFORCING);
+        MethodConfiguration myMethod = new MethodConfiguration();
         myMethod.setMethod("POST");
-        myMethod.setScopes(Arrays.asList("user:add"));
+        myMethod.setScopes(List.of("user:add"));
 
         existingPath.getMethods().add(myMethod);
         pathConfigurations.add(existingPath);
-        policyEnforcerConfig.setPaths(pathConfigurations);
 
-        Mockito.when(keycloakSpringBootProperties.getPolicyEnforcerConfig()).thenReturn(policyEnforcerConfig);
+        when(autoconfigurationService.getPathConfigurationsDom()).thenReturn(pathConfigurations);
         AuthorizationSettingsDTO settings = sut.generateConfigurationAsJson();
+
         Assertions.assertEquals("ENFORCING", settings.getPolicyEnforcementMode());
         Assertions.assertFalse(settings.isAllowRemoteResourceManagement());
         Assertions.assertEquals("AFFIRMATIVE", settings.getDecisionStrategy());
@@ -80,7 +74,7 @@ class JsonKeycloakConfigurationGeneratorTest {
         AuthorizedResourceDTO resource = resources.get(0);
 
         Assertions.assertEquals("Add User", resource.getName());
-        Assertions.assertEquals("Add User", resource.getDisplayName());
+        Assertions.assertEquals("Add User Details", resource.getDisplayName());
         Assertions.assertTrue(resource.getUris().contains("/my/path"));
         Assertions.assertEquals("user:add", resource.getScopes().iterator().next().getName());
 
